# qopilot

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
examples/: acme-system.md  acme-system.qopilot-recs.md
qopilot/: __init__.py  cli.py
qopilot/author/: __init__.py
qopilot/core/: __init__.py  llm.py  schemas.py
qopilot/core/prompts/: author_system.txt  interpret_system.txt
qopilot/interpret/: __init__.py
tests/: __init__.py  test_qopilot.py
