[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qopilot"
version = "0.1.0"
description = "AI copilot for AI assurance: recommends which aigrc checks to run, translates reports into business and regulatory narrative"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Connect Smart Consulting Inc.", email = "hello@connectsmart.ca" }]
keywords = ["ai", "governance", "qa", "assurance", "nist", "eu-ai-act", "owasp", "copilot"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "rich>=13.7",
  "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3"]

[project.scripts]
qopilot = "qopilot.cli:app"

[project.urls]
Homepage = "https://github.com/connectsmartconsulting/qopilot"
Issues = "https://github.com/connectsmartconsulting/qopilot/issues"

[tool.hatch.build.targets.wheel]
packages = ["qopilot"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
